Changes for 2.4.2rc1

New features:
A.F....... [ZBX-1357] updated Brazilian Portuguese and Greek translations; thanks to Zabbix translators (Richlv)
...G...... [ZBX-8503] increased limitation of command length for remote commands with agent (Sasha)

Bug fixes:
..F....... [ZBX-8887] fixed error messages when saving graph with invalid width and height (Sasha)
...G...PS. [ZBX-8699] fixed zbx_sleep_loop() to handle correctly signal arrival (igors)
.......PS. [ZBX-8793] fixed processing of snmp value to represent it as integer (igors)
..F....... [ZBX-8726] fixed warning messages shown by deprecated PHP 5.6 options "mbstring.internal_encoding" and "always_populate_raw_post_data" (Ivo)
..F....... [ZBX-8817] fixed clearing of web scenario item history and trends (Ivo)
..F....... [ZBX-8830] fixed map pop-up menu "Triggers" link being always disabled for host group map elements (Ivo)
....I..... [ZBX-5561] fixed configuration failure during cross compilation; thanks to Christof Lauber for the patch (igors)
.......PS. [ZBX-8621] added validation of received SNMP responses and warnings in case SNMP responses are bad (asaveljevs)
A.F....... [ZBX-8764] add missing validation for resource ID in screenitem.create and screenitem.update API (Krists)
........S. [ZBX-8754] fixed crash in escalator when processing an alert without an user, but with a media type set (wiper)

--------------------------------------------------------------------------------
Changes for 2.4.1

2.4.1rc2 was released as 2.4.1 without any changes

--------------------------------------------------------------------------------
Changes for 2.4.1rc2

New features:
A.F....... [ZBX-1357] updated Brazilian Portuguese, German and Slovak translations; thanks to Zabbix translators (Richlv)

Bug fixes:
..F....... [ZBX-8847] fixed mass actions in lists only affecting the selected elements on the current page (Pavels)

--------------------------------------------------------------------------------
Changes for 2.4.1rc1
